samples/_failures_safe/1761599272_4b6fee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6273c4f5.c: In function ‘main’:
./samples/SAFE/__tmp_6273c4f5.c:155:5: error: expected declaration or statement at end of input
  155 |     if (!fgets(input, sizeof(input), stdin)) {
      |     ^~
./samples/SAFE/__tmp_6273c4f5.c:155:5: error: expected declaration or statement at end of input
